crates/smart-config/tests/ui/config/invalid_path_start.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/config/invalid_path_start.rs:2:5
  |
2 |     smart_config::config!("!what": 1);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Path #0 `!what` is invalid: name contains a disallowed char '!' at position 0; allowed chars are [_a-z]', $DIR/tests/ui/config/invalid_path_start.rs:2:5
  |
  = note: this error originates in the macro `smart_config::config` (in Nightly builds, run with -Z macro-backtrace for more info)
