crates/smart-config/tests/ui/config/invalid_path_start.rs
fn main() {
    smart_config::config!("!what": 1);
}
